AJAX calls Testing

--- a/public/app.html
+++ b/public/app.html
@@ -14,22 +14,16 @@
   <body>
     <header>
       <p id="trade-mark">M.E Blogs</p>
-      <nav id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
-      </nav>
       <nav>
         <li id="navs">
-          <ul class="nav-btn"><a>Home Page</a></ul>
-          <ul class="nav-btn"><a>Join M.E</a></ul>
+          <ul class="nav-btn"><a>Write Post</a></ul>
           <ul class="nav-btn"><a>About Page</a></ul>
         </li>
       </nav>
     </header>
-    
+    <section id="blog-cards">
+
+    </section>
     <script src="app.js" async defer></script>
   </body>
 </html>
