jquery create card loop

--- a/public/app.html
+++ b/public/app.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap"> 
     <link rel="stylesheet" href="styles/app.css">
     <link rel="stylesheet" href="styles/mobile.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -16,14 +17,20 @@
       <p id="trade-mark">M.E Blogs</p>
       <nav>
         <li id="navs">
-          <ul class="nav-btn"><a>Write Post</a></ul>
+          <ul class="nav-btn"><a>Write Blog</a></ul>
           <ul class="nav-btn"><a>About Page</a></ul>
         </li>
       </nav>
     </header>
     <section id="blog-cards">
-
+      <div class="background">
+        <img src="https://a-static.besthdwallpaper.com/beautiful-ocean-background-view-wallpaper-1920x600-11516_57.jpg" alt="background">
+        <p>Whats on your Mind?</p>
+      </div>
     </section>
     <script src="app.js" async defer></script>
+    <footer>
+      
+    </footer>
   </body>
 </html>
